--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 
 html {
     font-size: 62.5%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 /* Remove default margin and padding */
